--- a/manifest.json
+++ b/manifest.json
@@ -12,12 +12,12 @@
     {
       "matches": ["*://*.nju.edu.cn/jiaowu*"],
       "js": ["js/inject.js"],
-      "css": ["css/material-components-web.min.css", "css/pjw.css"],
       "run_at": "document_start"
     }
   ],
   "web_accessible_resources": [
     "js/*",
+    "css/*",
     "resources/*"
   ]
 }
