--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,13 @@
 {
   "manifest_version": 2,
   "name": "PotatoPlus",
-  "version": "0.2.8",
+  "version": "0.3",
   "description": "Potato Overflow! NJU土豆改善工程",
   "icons": {
-    "16": "img/logo.png",
-    "48": "img/logo.png",
-    "128": "img/logo.png"
+    "96": "img/logo96.png",
+    "128": "img/logo128.png",
+    "512": "img/logo512.png",
+    "1024": "img/logo1024.png"
   },
   "author": "Limos",
   "content_scripts": [
