Update: Upgrade to Manifest V3

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "PotatoPlus",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "Potato Overflow! NJU土豆改善工程",
   "icons": {
     "96": "img/logo96.png",
@@ -19,10 +19,13 @@
       "all_frames": true
     }
   ],
-  "web_accessible_resources": [
-    "js/*",
-    "css/*",
-    "fonts/*"
+  "web_accessible_resources": [{
+    "resources": ["js/*","css/*","fonts/*"],
+    "matches": ["*://*.nju.edu.cn/*"]
+  }],
+  "host_permissions": [
+    "*://*.nju.edu.cn/jiaowu*",
+    "*://xk.nju.edu.cn/*"
   ],
   "browser_specific_settings": {
     "gecko": {
@@ -30,3 +33,4 @@
     }
   }
 }
+
