Update: Code refactor

--- a/manifest-v2.json
+++ b/manifest-v2.json
@@ -20,6 +20,9 @@
     }
   ],
   "web_accessible_resources": ["js/*","css/*","fonts/*"],
+  "permissions": [
+    "nativeMessaging"
+  ],
   "browser_specific_settings": {
     "gecko": {
       "update_url": "https://github.com/cubiccm/potatoplus/releases/latest/download/updates.json"
